--- a/bott/runColCoal.ipynb
+++ b/bott/runColCoal.ipynb
@@ -163,6 +163,38 @@
     "\n",
     "print(g.sum()*dlnr_out*1e3,g_int1.sum()*dlnr_out*1e3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.018852346606485e-05 0.06018852608259138 6.018852794900664e-05\n",
+      "0.06018852608259138 0.060188557633824906\n"
+     ]
+    }
+   ],
+   "source": [
+    "# everything together\n",
+    "nw=0.08*10**(np.random.randn()*2) # randomly choose a nw [cm-4]\n",
+    "lwci=0.01+np.random.rand()*3      # randomly choose a lwc [g/m3]\n",
+    "mu=np.random.rand()*4             # set mu\n",
+    "f_mu=nG.fmu(mu)\n",
+    "dm0=10*nG.dm_lwc(nw,lwci,1000)    # calculate dm0 in cm\n",
+    "g_int=g_out.copy()*0.0\n",
+    "lwc1,mD,dInt=nG.getMassDist(nw,dm0,f_mu,mu,1000) # get the mass distribution for a given lwc, nw and mu\n",
+    "for md1,d1 in zip(mD,dInt):\n",
+    "    ibin=np.log(d1/2*1e3)/dlnr_out\n",
+    "    g_int[int(ibin)]+=md1/dlnr_out*1e-3\n",
+    "\n",
+    "g_int1=gaussian_filter1d(g_int,2.0)\n",
+    "print(g_int.sum()*dlnr_out,lwc1,g_int1.sum()*dlnr_out)\n",
+    "print(lwc1,lwci)"
+   ]
   }
  ],
  "metadata": {
